--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,8 @@ version: 0.0.1
 environment:
   sdk: '>=1.20.1 <2.0.0'
 
-#dependencies:
+dependencies:
+  firebase: ^4.3.1
 #  path: ^1.4.1
 
 dev_dependencies:
